tests/rosetta/out/C/associative-array-merging.error
cc: exit status 1
/tmp/associative-array-merging.c: In function ‘merge’:
/tmp/associative-array-merging.c:111:16: error: incompatible types when initializing type ‘int’ using type ‘map_string_int’
  111 |   int result = tmp1;
      |                ^~~~
/tmp/associative-array-merging.c:113:13: error: incompatible types when initializing type ‘int’ using type ‘pair_string_int’
  113 |     int k = base.data[tmp2];
      |             ^~~~
/tmp/associative-array-merging.c:114:11: error: request for member ‘data’ in something not a structure or union
  114 |     result.data[k] = base.data[k];
      |           ^
/tmp/associative-array-merging.c:117:13: error: incompatible types when initializing type ‘int’ using type ‘pair_string_int’
  117 |     int k = update.data[tmp3];
      |             ^~~~~~
/tmp/associative-array-merging.c:118:11: error: request for member ‘data’ in something not a structure or union
  118 |     result.data[k] = update.data[k];
      |           ^
/tmp/associative-array-merging.c: In function ‘main’:
/tmp/associative-array-merging.c:128:22: error: incompatible type for argument 1 of ‘merge’
  128 |   int result = merge(&base, &update);
      |                      ^~~~~
      |                      |
      |                      base_item_t *
/tmp/associative-array-merging.c:109:26: note: expected ‘map_string_int’ but argument is of type ‘base_item_t *’
  109 | int merge(map_string_int base, map_string_int update) {
      |           ~~~~~~~~~~~~~~~^~~~
/tmp/associative-array-merging.c:128:29: error: incompatible type for argument 2 of ‘merge’
  128 |   int result = merge(&base, &update);
      |                             ^~~~~~~
      |                             |
      |                             update_item_t *
/tmp/associative-array-merging.c:109:47: note: expected ‘map_string_int’ but argument is of type ‘update_item_t *’
  109 | int merge(map_string_int base, map_string_int update) {
      |                                ~~~~~~~~~~~~~~~^~~~~~
/tmp/associative-array-merging.c: At top level:
/tmp/associative-array-merging.c:132:5: error: redefinition of ‘main’
  132 | int main() {
      |     ^~~~
/tmp/associative-array-merging.c:123:5: note: previous definition of ‘main’ with type ‘int()’
  123 | int main() {
      |     ^~~~
