tests/rosetta/out/C/associative-array-merging.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:37:18Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  char *key;
  int value;
} pair_string_int;
static pair_string_int pair_string_int_new(char *key, int value) {
  pair_string_int p;
  p.key = key;
  p.value = value;
  return p;
}
typedef struct {
  int len;
  int cap;
  pair_string_int *data;
} map_string_int;
static map_string_int map_string_int_create(int cap) {
  map_string_int m;
  m.len = 0;
  m.cap = cap;
  m.data = cap ? calloc(cap, sizeof(pair_string_int)) : NULL;
  if (cap && !m.data) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return m;
}
static void map_string_int_put(map_string_int *m, char *k, int v) {
  for (int i = 0; i < m->len; i++)
    if (strcmp(m->data[i].key, k) == 0) {
      m->data[i].value = v;
      return;
    }
  if (m->len >= m->cap) {
    m->cap = m->cap ? m->cap * 2 : 4;
    m->data =
        (pair_string_int *)realloc(m->data, sizeof(pair_string_int) * m->cap);
  }
  m->data[m->len++] = pair_string_int_new(k, v);
}
static int map_string_int_get(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return m.data[i].value;
  return 0;
}
static int map_string_int_contains(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return 1;
  return 0;
}
static int cmp_map_string_int(map_string_int a, map_string_int b) {
  int aa = map_string_int_get(a, "a");
  int ba = map_string_int_get(b, "a");
  if (aa != ba)
    return aa > ba ? 1 : -1;
  int ab = map_string_int_get(a, "b");
  int bb = map_string_int_get(b, "b");
  if (ab != bb)
    return ab > bb ? 1 : -1;
  return 0;
}
typedef struct {
  const char *name;
  double price;
  const char *color;
} base_item_t;
typedef struct {
  int len;
  base_item_t *data;
} base_item_list_t;
base_item_list_t create_base_item_list(int len) {
  base_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(base_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  double price;
  const char *color;
  int year;
} update_item_t;
typedef struct {
  int len;
  update_item_t *data;
} update_item_list_t;
update_item_list_t create_update_item_list(int len) {
  update_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(update_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int merge(map_string_int base, map_string_int update) {
  map_string_int tmp1 = map_string_int_create(0);
  int result = tmp1;
  for (int tmp2 = 0; tmp2 < base.len; tmp2++) {
    int k = base.data[tmp2];
    result.data[k] = base.data[k];
  }
  for (int tmp3 = 0; tmp3 < update.len; tmp3++) {
    int k = update.data[tmp3];
    result.data[k] = update.data[k];
  }
  return result;
}

int main() {
  base_item_t base =
      (base_item_t){.name = "Rocket Skates", .price = 12.75, .color = "yellow"};
  update_item_t update =
      (update_item_t){.price = 15.25, .color = "red", .year = 1974};
  int result = merge(&base, &update);
  printf("%d\n", result);
}

int main() {
  main();
  return 0;
}
